# emuballs

./: CMakeLists.txt  Dockerfile  README.md
docs/: emuballs.dia
include/emuballs/: access.hpp  bitmask_enum.hpp  canvas.hpp  color.hpp  device.hpp  dptr.hpp  errors.hpp  export.h  memory.hpp  programmer.hpp  registerset.hpp  regval.hpp
src/: CMakeLists.txt  bitmask_enum.hpp  dptr.hpp  strings.hpp
src/common/: strings.cpp  strings.hpp
src/emuballs/: CMakeLists.txt  access.hpp  armcpu.cpp  armcpu.hpp  armgpu.cpp  armgpu.hpp  armmachine.cpp  armmachine.hpp  armopcode.cpp  armopcode.hpp  armopcode_dataproc_psr.cpp  armopcode_dataproc_psr.hpp  armopcode_impl.cpp  armopcode_impl.hpp  armregisterset.cpp  armregisterset.hpp  array_queue.hpp  canvas.cpp  canvas.hpp  color.hpp  device.cpp  device.hpp  device_pi.cpp  device_pi.hpp  dptr_impl.hpp  errors.hpp  errors_private.hpp  export.h  memory.cpp  memory.hpp  memory_impl.hpp  opdecoder.cpp  opdecoder.hpp  pi_timer.cpp  pi_timer.hpp  picture.cpp  picture.hpp  programmer.cpp  programmer.hpp  programmer_impl.hpp  (+9 more)
src/emulens/: CMakeLists.txt  cycler.cpp  cycler.hpp  device.cpp  device.hpp  device.ui  display.cpp  display.hpp  dptr.hpp  editarray.cpp  editarray.hpp  errors.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  memory.cpp  memory.hpp  memory.ui  pickdevice.cpp  pickdevice.hpp  pickdevice.ui  registers.cpp  registers.hpp  registers.ui  trackablemdiwindow.cpp  trackablemdiwindow.hpp  updateable.hpp  version.cpp  version.hpp
src/emulens/hexedit/: qhexeditprivate.cpp
src/emulens/hexedit/document/metadata/: qhexmetadata.cpp
src/emulens/hexview/: hexview.cpp  hexview.hpp
src/emurun/: CMakeLists.txt  emurun.cpp
src/machine/: CMakeLists.txt  armmachine.cpp  armmachine.hpp  armopcode.cpp  armopcode.hpp  armopcode_dataproc_psr.cpp  armopcode_dataproc_psr.hpp  armopcode_impl.cpp  armopcode_impl.hpp  errors.hpp  memory.cpp  memory.hpp  opcode.hpp  opdecoder.cpp  opdecoder.hpp  shift.hpp
tests/: CMakeFuncs.txt  CMakeLists.txt  strings.cpp
tests/emuballs/: CMakeLists.txt  arm_arithmetic_carry_overflow.cpp  arm_program_fixture.hpp  armflags.cpp  armmachine.cpp  armopcode_block_data_transfer.cpp  armopcode_branch.cpp  armopcode_byte_reverse.cpp  armopcode_conditions.cpp  armopcode_dataproc_psr.cpp  armopcode_double_data_transfer.cpp  armopcode_factory.cpp  armopcode_multiply.cpp  armopcode_multiply_long.cpp  armopcode_single_data_swap.cpp  armopcode_single_data_transfer.cpp  armregisterset.cpp  array_queue.cpp  device_factory.cpp  memory.cpp  namedregister.cpp  opdecoder.cpp  programs.cpp  shift.cpp
tests/machine/: CMakeLists.txt  arm_arithmetic_carry_overflow.cpp  arm_program_fixture.hpp  armflags.cpp  armopcode.cpp  armopcode_branch.cpp  armopcode_conditions.cpp  armopcode_dataproc_psr.cpp  armopcode_factory.cpp  armopcode_multiply_long.cpp  armopcode_single_data_swap.cpp  armopcode_single_data_transfer.cpp  memory.cpp  opdecoder.cpp  programs.cpp  shift.cpp
